--- a/BathApp/Base.lproj/Main.storyboard
+++ b/BathApp/Base.lproj/Main.storyboard
@@ -1,24 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BathApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bath_head" translatesAutoresizingMaskIntoConstraints="NO" id="Sdd-6Y-CZ2">
+                                <rect key="frame" x="0.0" y="188" width="414" height="292"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kuriemi" translatesAutoresizingMaskIntoConstraints="NO" id="yPr-W3-4jd">
+                                <rect key="frame" x="98" y="480" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="xbP-ab-hKD"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bath_body" translatesAutoresizingMaskIntoConstraints="NO" id="FqS-7S-GS3">
+                                <rect key="frame" x="29" y="464" width="356" height="186"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please Shake ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nuh-Ki-P35">
+                                <rect key="frame" x="92" y="714" width="230" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Sdd-6Y-CZ2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0Cv-0b-y8Z"/>
+                            <constraint firstItem="yPr-W3-4jd" firstAttribute="top" secondItem="Sdd-6Y-CZ2" secondAttribute="bottom" id="0yc-s5-5h2"/>
+                            <constraint firstItem="Sdd-6Y-CZ2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="144" id="3eO-iF-rzu"/>
+                            <constraint firstItem="FqS-7S-GS3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="421" id="6W0-Dl-a5T"/>
+                            <constraint firstItem="FqS-7S-GS3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="29" id="AMj-p4-IMa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yPr-W3-4jd" secondAttribute="trailing" constant="76" id="CMK-89-TVy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FqS-7S-GS3" secondAttribute="bottom" constant="211" id="OVE-dY-rgq"/>
+                            <constraint firstItem="Sdd-6Y-CZ2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cGm-7h-3F5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FqS-7S-GS3" secondAttribute="trailing" constant="29" id="eSK-IO-4R4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sdd-6Y-CZ2" secondAttribute="bottom" constant="382" id="wqa-vA-Myp"/>
+                            <constraint firstItem="yPr-W3-4jd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="98" id="z4P-aW-Cj0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="kuriemiBottomConstant" destination="0yc-s5-5h2" id="6O3-5l-igR"/>
+                        <outlet property="kuriemiHeight" destination="xbP-ab-hKD" id="DqQ-8x-kwN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="72.991071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bath_body" width="800" height="353"/>
+        <image name="bath_head" width="800" height="658"/>
+        <image name="kuriemi" width="503" height="450"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
